# docs/swagger.yaml
@@ -9,6 +9,13 @@ definitions:
     - 5
     - 6
     - 7
+    - 8
+    - 9
+    - 10
+    - 11
+    - 12
+    - 13
+    - 14
     type: integer
     x-enum-varnames:
     - NoError
@@ -19,6 +26,13 @@ definitions:
     - UserNonExists
     - PasswordInvalid
     - PermissionDenied
+    - ClassError
+    - SexError
+    - NameExists
+    - EmailFormatError
+    - RealNameFormatError
+    - SchoolError
+    - PasswordTooShort
   model.CommonResponse-any:
     properties:
       data: {}
@@ -69,6 +83,8 @@ definitions:
       realName:
         type: string
       schoolCode:
+        type: string
+      sex:
         type: string
       userSchoollD:
         type: string
@@ -169,6 +185,10 @@ paths:
         in: query
         name: class
         type: string
+      - description: 修改性别
+        in: query
+        name: sex
+        type: string
       produces:
       - application/json
       responses:
@@ -181,6 +201,48 @@ paths:
           schema:
             $ref: '#/definitions/model.CommonResponse-any'
       summary: 修改指定管理员信息
+      tags:
+      - example
+  /authrequired/admin/admin/new:
+    post:
+      consumes:
+      - application/json
+      description: 注册管理员
+      parameters:
+      - description: 登录返回的Token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 新用户用户名
+        in: query
+        name: name
+        type: string
+      - description: 新用户邮箱
+        format: email
+        in: query
+        name: email
+        type: string
+      - description: 新用户真实姓名
+        in: query
+        name: realName
+        type: string
+      - description: 新用户性别
+        in: query
+        name: sex
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CommonResponse-any'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.CommonResponse-any'
+      summary: 注册管理员
       tags:
       - example
   /authrequired/admin/admin/password:
@@ -303,6 +365,10 @@ paths:
         in: query
         name: class
         type: string
+      - description: 修改性别
+        in: query
+        name: sex
+        type: string
       produces:
       - application/json
       responses:
@@ -357,6 +423,60 @@ paths:
           schema:
             $ref: '#/definitions/model.CommonResponse-any'
       summary: 获取指定学生信息
+      tags:
+      - example
+  /authrequired/admin/student/new:
+    post:
+      consumes:
+      - application/json
+      description: 注册学生
+      parameters:
+      - description: 登录返回的Token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 新用户用户名
+        in: query
+        name: name
+        type: string
+      - description: 新用户邮箱
+        format: email
+        in: query
+        name: email
+        type: string
+      - description: 新用户真实姓名
+        in: query
+        name: realName
+        type: string
+      - description: 新用户学校ID
+        in: query
+        name: userSchoollD
+        type: string
+      - description: 新用户学校代码
+        in: query
+        name: schoolCode
+        type: string
+      - description: 新用户班级
+        in: query
+        name: class
+        type: string
+      - description: 新用户性别
+        in: query
+        name: sex
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CommonResponse-any'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.CommonResponse-any'
+      summary: 注册学生
       tags:
       - example
   /authrequired/admin/student/password:
@@ -512,6 +632,10 @@ paths:
         in: query
         name: class
         type: string
+      - description: 修改性别
+        in: query
+        name: sex
+        type: string
       produces:
       - application/json
       responses:
@@ -566,6 +690,48 @@ paths:
           schema:
             $ref: '#/definitions/model.CommonResponse-any'
       summary: 获取指定教师信息
+      tags:
+      - example
+  /authrequired/admin/teacher/new:
+    post:
+      consumes:
+      - application/json
+      description: 注册教师
+      parameters:
+      - description: 登录返回的Token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 新用户用户名
+        in: query
+        name: name
+        type: string
+      - description: 新用户邮箱
+        format: email
+        in: query
+        name: email
+        type: string
+      - description: 新用户真实姓名
+        in: query
+        name: realName
+        type: string
+      - description: 新用户性别
+        in: query
+        name: sex
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CommonResponse-any'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.CommonResponse-any'
+      summary: 注册教师
       tags:
       - example
   /authrequired/admin/teacher/password:
@@ -758,6 +924,10 @@ paths:
         in: query
         name: class
         type: string
+      - description: 修改性别
+        in: query
+        name: sex
+        type: string
       produces:
       - application/json
       responses:
@@ -846,15 +1016,34 @@ paths:
         name: token
         required: true
         type: string
-      - description: 登录返回的Token
+      - description: 新用户用户名
         in: query
         name: name
-        required: true
         type: string
-      - description: 登录返回的Token
+      - description: 新用户邮箱
+        format: email
         in: query
-        name: token
-        required: true
+        name: email
+        type: string
+      - description: 新用户真实姓名
+        in: query
+        name: realName
+        type: string
+      - description: 新用户学校ID
+        in: query
+        name: userSchoollD
+        type: string
+      - description: 新用户学校代码
+        in: query
+        name: schoolCode
+        type: string
+      - description: 新用户班级
+        in: query
+        name: class
+        type: string
+      - description: 新用户性别
+        in: query
+        name: sex
         type: string
       produces:
       - application/json
